PRAG-59 salary,grade in manager form, submitting form

--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -61,9 +61,9 @@
 </div>
 
 <!-- footer -->
-<div id="footer">
-    From Kharkov with Love (c) Mirantis
-</div>
+<!--<div id="footer">-->
+    <!--From Kharkov with Love (c) Mirantis-->
+<!--</div>-->
 
 </body>
 </html>
