--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -11,19 +11,25 @@ function send_value(id, value) {
 }
 
 $(document).ready(function() {
-    /*
-    if (form_type == 'main') {
-        // I don't expect we render JavaScript this way
-        {# {% for goal in prev_goals %} #}
-            $('#prev_goals').append('<select id="{{goal.key}}"></select>');
-            $('#{{goal.key}}').append('<option value="1" class="grade">below expectations</option>');
-            $('#{{goal.key}}').append('<option value="2" class="grade">meet expectations</option>');
-            $('#{{goal.key}}').append('<option value="3" class="grade">above expectations</option>');
-            $('#prev_goals').append('{{goal.value}}<br>');
-        {# {% endfor %} #}
-    }
-    */
 
+    if ('{{status}}' != 'draft'){
+        $('input:text').attr('readonly', 'readonly');
+        $('.add_button').attr('disabled', 'disabled')
+    }
+
+    $('#submit').click(function(){
+        $.get('/pr/manager/submit/'+form_key, function(data){
+            if (data == 'ok'){
+                $('input:text').attr('readonly', 'readonly');
+                $('.add_button').attr('disabled', 'disabled')
+            }
+            else{
+                alert(data)
+            }
+        })
+    })
+
+    
     $('.grade').click(function() {
         var id = $(this).parent().attr('id');
         $.post('/pr/data/update/'+id, {'grade': this.value}, function(data){alert(data)})
@@ -166,10 +172,32 @@ $(document).ready(function() {
     <input type="button" class="add_button" value="add" >
 </div>
 
+<div id='salary' class="input_div">
+    <p>Salary:</p>
+        {% if salary %}
+            <input type="text" id="{{salary.key}}" value="{{salary.value}}" onblur="send_value(id, value)">
+        {% else %}
+            <input type="button" class="add_button" value="add" >
+        {% endif %}
+</div>
 
-<div id="conclusions">
-    <p>Performance conclusion:</p>
-    <!-- todo insert logic here -->
+<div id='grade' class="input_div">
+    <p>Grade:</p>
+    {% if grade %}
+        <input type="text" id="{{grade.key}}" value="{{grade.value}}" onblur="send_value(id, value)">
+    {% else %}
+        <input type="button" class="add_button" value="add" >
+    {% endif %}
+</div>
+
+
+<div id='conclusion' class="input_div">
+    <p>Conclusion:</p>
+    {% if grade %}
+        <input type="text" id="{{conclusion.key}}" value="{{conclusion.value}}" onblur="send_value(id, value)">
+    {% else %}
+        <input type="button" class="add_button" value="add" >
+    {% endif %}
 </div>
 
 <div>
@@ -187,4 +215,7 @@ $(document).ready(function() {
     </form>
 </div>
 
+<div>
+    <input type="button" id="submit" value="submit">
+</div>
 {% endblock %}
