--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -4,23 +4,20 @@
 <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
 <script type="text/javascript">
-
-
-
     $(document).ready(function(){
 
         $('.date').datepicker({ dateFormat: 'yy-mm-dd' });
         $('.date').focusout(function(){
             var name = this.name;
-            var key = this.title;
+            var key = this.getAttribute("_key");
             if (name == 'start'){$.post('pr/update',
                                         {'start': this.value, 'key': key})}
             if (name == 'finish'){$.post('pr/update',
                                         {'finish': this.value, 'key': key})}
-        })
+        });
         $('#period').click(function(){
             ('.result').load('/new_period')
-        })
+        });
         $('.register').click(function(){
             var button = $(this);
             var key = this.title;
@@ -39,40 +36,34 @@
             <tr>
                 <td>employee</td>
                 <td>manager</td>
-                <td>start date</td>
-                <td>finish date</td>
+                <td>start&nbsp;date</td>
+                <td>finish&nbsp;date</td>
                 <td>type</td>
-                <td>manager form</td>
+                <td>MAF</td>
                 <td>status</td>
             </tr>
             {% for pr in prs %}
                 <tr>
                     <td>{{pr.employee.email}}</td>
                     <td>{{pr.manager.email}}</td>
-                    <td><input type="text" title="{{pr.key}}" name="start" class="date" value="{{pr.start_date}}"></td>
-                    <td><input type="text" title="{{pr.key}}" class="date" name="finish" value="{{pr.finish_date}}"></td>
-                    <td>type: {{pr.type}}</td>
+                    <td><input type="text" _key="{{pr.key}}" name="start" class="date" value="{{pr.start_date}}"></td>
+                    <td><input type="text" _key="{{pr.key}}" class="date" name="finish" value="{{pr.finish_date}}"></td>
+                    <td>{{pr.type}}</td>
                     <td>{% ifequal pr.manager_form.status 'submitted' %}
                             <a href="/pr/get/manager/{{pr.key}}">{{pr.employee.first_name}} {{pr.employee.last_name}} form</a>
                         {% else %}
                             {{pr.manager_form.status}}
                         {% endifequal %}
                     </td>
-                    <td>{% ifequal pr.manager_form.status 'registered' %}
-                            <p>registered</p>
-                        {% endifequal %}
-                        {% ifequal pr.manager_form.status 'approved' %}
-                            <p>approved</p>
-                        {% endifequal %}
-                        {% ifequal pr.manager_form.status 'draft' %}
-                            <p>draft</p>
-                        {% endifequal %}
+                    <td>
                         {% ifequal pr.manager_form.status 'submitted' %}
                             <input type="button" class='register' title="{{pr.key}}" value="register">
+                        {% else %}
+                            {{pr.manager_form.status}}
                         {% endifequal %}
                     </td>
                 </tr>
             {% endfor %}
         </table>
-        <a href="/new_period">new</a>
+        <a href="/new_period">Create New PR Period</a>
 {% endblock %}
