--- a/application/templates/api.manager.html
+++ b/application/templates/api.manager.html
@@ -20,9 +20,9 @@
                     <td>{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}}</td>
                     <td>
                         {% if pr.manager_form %}
-                            <input type="button" value="mark" onclick="load('pr/get/manager/{{pr.key}}')">
+                            <a href="#" onclick="load('pr/get/manager/{{pr.key}}'); return false;">load</a>
                         {% else %}
-                            <input type="button" value="add" onclick="load('/pr/add/manager/{{pr.employee.key}}')">
+                            <a href="#" onclick="load('/pr/add/manager/{{pr.employee.key}}'); return false;">create</a>
                         {% endif %}
                     </td>
                     <td>
