--- a/application/templates/api.employee_form.html
+++ b/application/templates/api.employee_form.html
@@ -57,8 +57,8 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
-<p>Performance Review Form for {{emp.first_name}} {{emp.last_name}}</p>
-<p>Manager: {{author.first_name}} {{author.last_name}}</p>
+<p>Performance Review Form for {{emp.first_name}}&nbsp;{{emp.last_name}}</p>
+<p>Manager: {{author.first_name}}&nbsp;{{author.last_name}}</p>
 <p>date: {{date}}</p>
 
 <div id="">
@@ -69,7 +69,7 @@ $(document).ready(function() {
 
 <div id="project" class="input_div">
     <p>Please list all projects and initiatives you participated in during this performance review period.</p>
-    {% for project in projects %}
+    {% for project in data.projects %}
         <input type="text" size="75" id="{{project.key}}" value="{{project.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -77,7 +77,7 @@ $(document).ready(function() {
 
 <div id="achievements" class="input_div">
     <p>What do you consider to be your key accomplishments since your last review?</p>
-    {% for ach in achievements %}
+    {% for ach in data.achievements %}
         <input type="text" size="75" id="{{ach.key}}" value="{{ach.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -85,7 +85,7 @@ $(document).ready(function() {
 
 <div id="responsibility" class="input_div">
     <p>List your key job responsibilities during your performance period. Please comment on your job performance assessment.</p>
-    {% for responsibility in responsibilities %}
+    {% for responsibility in data.responsibilities %}
         <input type="text" size="75" id="{{responsibility.key}}" value="{{responsibility.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -93,7 +93,7 @@ $(document).ready(function() {
 
 <div id="challenges" class="input_div">
     <p>If you have experienced challenges, please specify the areas where you need to focus and improve. </p>
-    {% for challenge in challenges %}
+    {% for challenge in data.challenges %}
         <!-- todo: use css class instead of properties -->
         <input type="text" size="75" id="{{challenge.key}}" value="{{challenge.value}}" onblur="send_value(id, value)">
     {% endfor %}
@@ -102,7 +102,7 @@ $(document).ready(function() {
 
 <div id="skill" class="input_div">
     <p>Please mention what skills and/or knowledge do you need for further development to contribute to your overall job success.</p>
-    {% for skill in skills %}
+    {% for skill in data.skills %}
         <!-- todo: use css class instead of properties -->
         <input type="text" size="75" id="{{skill.key}}" value="{{skill.value}}" onblur="send_value(id, value)">
     {% endfor %}
@@ -138,7 +138,7 @@ $(document).ready(function() {
 
 <div id="next_goals" class="input_div">
     <p>Goals for the next period:</p>
-    {% for goal in next_goals %}
+    {% for goal in data.next_goals %}
         <input type="text" size="75" id="{{goal.key}}" value="{{goal.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -146,7 +146,7 @@ $(document).ready(function() {
 
 <div id="career" class="input_div">
     <p>What are your professional interests and long-term career objectives, and what are you plans to accomplish these objectives?  </p>
-    {% for career in careers %}
+    {% for career in data.careers %}
         <input type="text" size="75" id="{{career.key}}" value="{{career.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -154,7 +154,7 @@ $(document).ready(function() {
 
 <div id="issue" class="input_div">
     <p>Do you see any issues with your role within the company and/or your project(s)?</p>
-    {% for issue in issues %}
+    {% for issue in data.issues %}
         <input type="text" size="75" id="{{issue.key}}" value="{{issue.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -162,7 +162,7 @@ $(document).ready(function() {
 
 <div id="complaint" class="input_div">
     <p>Do you have any complaints?</p>
-    {% for complaint in complaints %}
+    {% for complaint in data.complaints %}
         <input type="text" size="75" id="{{complaint.key}}" value="{{complaint.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -170,16 +170,10 @@ $(document).ready(function() {
 
 <div id="manager_help" class="input_div">
     <p>Is there anything your manager could do to help you do a better job? </p>
-    {% for manager_help in manager_helps %}
+    {% for manager_help in data.manager_helps %}
         <input type="text" size="75" id="{{manager_help.key}}" value="{{manager_help.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
-</div>
-
-
-<div id="conclusions">
-    <p>Performance conclusion:</p>
-    <!-- todo insert logic here -->
 </div>
 
 <div>
