--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -79,7 +79,7 @@ $(document).ready(function() {
 
 <div id="project" class="input_div">
     <p>Please list all projects and initiatives you participated in during this performance review period.</p>
-    {% for project in projects %}
+    {% for project in data.projects %}
         <input type="text" size="75" id="{{project.key}}" value="{{project.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -87,7 +87,7 @@ $(document).ready(function() {
 
 <div id="achievements" class="input_div">
     <p>What do you consider to be your key accomplishments since your last review?</p>
-    {% for ach in achievements %}
+    {% for ach in data.achievements %}
         <input type="text" size="75" id="{{ach.key}}" value="{{ach.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -95,7 +95,7 @@ $(document).ready(function() {
 
 <div id="responsibility" class="input_div">
     <p>List your key job responsibilities during your performance period. Please comment on your job performance assessment.</p>
-    {% for responsibility in responsibilities %}
+    {% for responsibility in data.responsibilities %}
         <input type="text" size="75" id="{{responsibility.key}}" value="{{responsibility.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -103,7 +103,7 @@ $(document).ready(function() {
 
 <div id="challenges" class="input_div">
     <p>If you have experienced challenges, please specify the areas where you need to focus and improve. </p>
-    {% for challenge in challenges %}
+    {% for challenge in data.challenges %}
         <!-- todo: use css class instead of properties -->
         <input type="text" size="75" id="{{challenge.key}}" value="{{challenge.value}}" onblur="send_value(id, value)">
     {% endfor %}
@@ -112,7 +112,7 @@ $(document).ready(function() {
 
 <div id="skill" class="input_div">
     <p>Please mention what skills and/or knowledge do you need for further development to contribute to your overall job success.</p>
-    {% for skill in skills %}
+    {% for skill in data.skills %}
         <!-- todo: use css class instead of properties -->
         <input type="text" size="75" id="{{skill.key}}" value="{{skill.value}}" onblur="send_value(id, value)">
     {% endfor %}
@@ -148,7 +148,7 @@ $(document).ready(function() {
 
 <div id="next_goals" class="input_div">
     <p>Goals for the next period:</p>
-    {% for goal in next_goals %}
+    {% for goal in data.next_goals %}
         <input type="text" size="75" id="{{goal.key}}" value="{{goal.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -156,7 +156,7 @@ $(document).ready(function() {
 
 <div id="career" class="input_div">
     <p>What are your professional interests and long-term career objectives, and what are you plans to accomplish these objectives?  </p>
-    {% for career in careers %}
+    {% for career in data.careers %}
         <input type="text" size="75" id="{{career.key}}" value="{{career.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -164,7 +164,7 @@ $(document).ready(function() {
 
 <div id="issue" class="input_div">
     <p>Do you see any issues with your role within the company and/or your project(s)?</p>
-    {% for issue in issues %}
+    {% for issue in data.issues %}
         <input type="text" size="75" id="{{issue.key}}" value="{{issue.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -172,7 +172,7 @@ $(document).ready(function() {
 
 <div id="complaint" class="input_div">
     <p>Do you have any complaints?</p>
-    {% for complaint in complaints %}
+    {% for complaint in data.complaints %}
         <input type="text" size="75" id="{{complaint.key}}" value="{{complaint.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -180,7 +180,7 @@ $(document).ready(function() {
 
 <div id="manager_help" class="input_div">
     <p>Is there anything your manager could do to help you do a better job? </p>
-    {% for manager_help in manager_helps %}
+    {% for manager_help in data.manager_helps %}
         <input type="text" size="75" id="{{manager_help.key}}" value="{{manager_help.value}}" onblur="send_value(id, value)">
     {% endfor %}
     <input type="button" class="add_button" value="add" >
@@ -188,8 +188,8 @@ $(document).ready(function() {
 
 <div id='salary' class="input_div">
     <p>Salary:</p>
-        {% if salary %}
-            <input type="text" id="{{salary.key}}" value="{{salary.value}}" onblur="send_value(id, value)">
+        {% if data.salary %}
+            <input type="text" id="{{data.salary.key}}" value="{{data.salary.value}}" onblur="send_value(id, value)">
         {% else %}
             <input type="button" class="add_button" value="add" >
         {% endif %}
@@ -197,8 +197,8 @@ $(document).ready(function() {
 
 <div id='grade' class="input_div">
     <p>Grade:</p>
-    {% if grade %}
-        <input type="text" id="{{grade.key}}" value="{{grade.value}}" onblur="send_value(id, value)">
+    {% if data.grade %}
+        <input type="text" id="{{data.grade.key}}" value="{{data.grade.value}}" onblur="send_value(id, value)">
     {% else %}
         <input type="button" class="add_button" value="add" >
     {% endif %}
@@ -207,8 +207,8 @@ $(document).ready(function() {
 
 <div id='conclusion' class="input_div">
     <p>Conclusion:</p>
-    {% if grade %}
-        <input type="text" id="{{conclusion.key}}" value="{{conclusion.value}}" onblur="send_value(id, value)">
+    {% if data.conclusion %}
+        <input type="text" id="{{data.conclusion.key}}" value="{{data.conclusion.value}}" onblur="send_value(id, value)">
     {% else %}
         <input type="button" class="add_button" value="add" >
     {% endif %}
