--- a/application/templates/detailed_report.html
+++ b/application/templates/detailed_report.html
@@ -31,8 +31,8 @@
                     </td>
                     <td>{{pr.manager_form.get_all_data.conclusion.value}}</td>
                     <td>Finally</td>
-                    <td>{{pr.manager_form.get_all_data.salary.value}}</td>
-                    <td>{{pr.manager_form.get_all_data.grade.value}}</td>
+                    <td>{{ pr.manager_form.salary.highlight }} {{pr.manager_form.get_all_data.salary.value}}</td>
+                    <td{% if pr.manager_form.grade.highlight %} bgcolor="red" {% endif %}>{{pr.manager_form.get_all_data.grade.value}}</td>
                     <td>{{pr.period.start_date}}</td>
                     <td>Comment</td>
                 </tr>
