--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -3,8 +3,13 @@
 {% block script %}
 <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
+        <script type="text/javascript" src="/static/jquery.js"></script>
 <script type="text/javascript">
     $(document).ready(function(){
+
+        $('.comment').focusout(function(){
+            $.post('pr/data/update/' + this.name, {'value': this.value });
+        })
 
         $('.date').datepicker({ dateFormat: 'yy-mm-dd' });
         $('.date').focusout(function(){
@@ -42,6 +47,7 @@
                 <td>date</td>
                 <td>MAF</td>
                 <td>status</td>
+                <td>comment</td>
             </tr>
             {% for pr in period.performance_reviews %}
                 <tr>
@@ -51,6 +57,7 @@
                     <td>
                         <a href="/pr/get/manager/{{pr.key}}">{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}} form</a>
                     </td>
+
                     <td>
                         {% ifequal pr.manager_form.status 'submitted' %}
                             <input type="button" class='register' title="{{pr.key}}" value="register">
@@ -60,6 +67,14 @@
                         {% if not pr.manager_form.status %}
                             none
                         {% endif %}
+                    </td>
+                    <td>
+                        Comment:
+                        <input type="text" class="comment"
+                            {% if pr.comment.value %}
+                                value="{{pr.comment.value}}"
+                            {% endif %}
+                        name="{{pr.comment.key}}">
                     </td>
                 </tr>
             {% endfor %}
