--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -22,8 +22,8 @@ $(document).ready(function() {
     }
     if ('{{status}}' == 'registered'){
         
-        $('#{{salary.key}}').attr('readonly', 'readonly');
-        $('#{{grade.key}}').attr('readonly', 'readonly');
+        $('#{{data.salary.key}}').attr('readonly', 'readonly');
+        $('#{{data.grade.key}}').attr('readonly', 'readonly');
     }
 
     $('#approve').click(function(){
