--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -3,7 +3,6 @@
 {% block script %}
 <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
-        <script type="text/javascript" src="/static/jquery.js"></script>
 <script type="text/javascript">
     $(document).ready(function(){
 
@@ -55,7 +54,7 @@
                     <td>{{pr.manager.email}}</td>
                     <td><input type="text" _key="{{pr.key}}" class="date" name="finish" value="{{pr.date}}"></td>
                     <td>
-                        <a href="/pr/get/manager/{{pr.key}}">{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}} form</a>
+                        <a href="#" onclick="load('/pr/get/manager/{{pr.key}}')">{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}} form</a>
                     </td>
 
                     <td>
@@ -69,7 +68,6 @@
                         {% endif %}
                     </td>
                     <td>
-                        Comment:
                         <input type="text" class="comment"
                             {% if pr.comment.value %}
                                 value="{{pr.comment.value}}"
