--- a/application/templates/api.hr.html
+++ b/application/templates/api.hr.html
@@ -48,8 +48,8 @@
     <div>
         type:
         <select id='type'>
-            <option value='main'>main</option>
-            <option value='intermediate'>intermediate</option>
+            <option value='annual'>annual</option>
+            <option value='semi-annual'>semi-annual</option>
         </select>
     </div>
 <p></p>
